2006-03-20  Dirk Mueller <mueller@kde.org>

	* misc/loader.cpp: fix pixmap leak in tiled_pixmap()

2006-03-20  Allan Sandfeld Jensen <kde@carewolf.com>

        Improve the CSS :lang() selector to match clarified specification

        * khtml_part.cpp: parse HTTP content-language
        * xml/dom_docimpl.cpp: parse HTTP-EQUIV content-language
        * css/cssstyleselector.cpp: match :lang() against parents and ultimately the document

2006-03-07  Germain Garand  <germain@ebooksfrance.org>

        Scope: relayout/repaint/widget masks fixes. Refine stacking context exploration. Optimise.

        * khtmlview.cpp (reset/timerEvent): remove obsolete code checking validity of visible widgets list.
        (drawContents): use widget geometry rather than the RenderWidget's rect (fixes widget borders not being updated)
        Check if widget is in the dirty rect before doing any work.

        * rendering/render_block.cpp (layoutBlockChildren): I meant !child->isPositioned() here, not isPositioned(). No need to
        dirty positioned children as this is handled by the containing block chain through layoutPositionedObjects
        (layoutPositionedObjects): always relayout fixed objects.

        * rendering/render_canvas.cpp (layout): check canvas dimensions and call layoutBlock directly with relayoutChildren boolean.

        * rendering/render_layer.{h,cpp} (paintedRegion): constrain our shape to the visibleRect. Use convertToLayerCoords to get a correct
        visibleFlowRegion (updateWidgetMasks): don't forget to update the mask if it reverts to none at all.

        * rendering/render_object.{h,cpp} (containingBlock): for relpos inlines, return the nearest block (skipping to next containingBlock gives
        stalled layout flags problems - #121653). (updateWidgetMasks): mask the content box, not the border box.
        (enclosingStackingContext) new. Returns the layer defining current stacking context.
